cabal-version:      3.0
name:               smol-repl
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           A shell wrapper
license:            MIT
license-file:       LICENSE
author:             lyraplasma
maintainer:         274751584+lyraplasma@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable smol-repl
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0, directory, process
    hs-source-dirs:   app
    default-language: Haskell2010
